Upload for testing app for Exercise 3.3

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -3,3 +3,15 @@ $color: steelblue;
 .my-flix {
   color: $color;
 }
+
+img {
+  width: 10%;
+}
+
+.main-view {
+  cursor: pointer;
+}
+
+a {
+  cursor: pointer;
+}
