Almost finished with app. One error with the filter portion of app

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -5,3 +5,12 @@ img {
 a {
   cursor: pointer;
 }
+
+body {
+  background: rgb(153, 153, 153);
+  font-family: 'Special Elite', cursive;
+}
+
+.link-color {
+  color: black;
+}
